[package]
name = "cert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ecdsa = { version = "0.16.9", features = ["pkcs8", "signing", "verifying", "der"] }
p256 = "0.13.2"
simple_asn1 = "0.6.2"
simple_x509 = "=1.1.0"
